# AgenticDataBase

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agenticdb/: __init__.py
agenticdb/core/: __init__.py  dependency.py  models.py  version.py
agenticdb/core/agents/: __init__.py
agenticdb/core/agents/base/: __init__.py  base_agent.py
agenticdb/core/agents/ingestion/: __init__.py  action_extractor_agent.py  claim_extractor_agent.py  coordinator.py  dependency_inference_agent.py  event_extractor_agent.py  types.py
agenticdb/core/agents/intent/: __init__.py  binding_agent.py  intent_parser_agent.py  types.py  validation_agent.py
agenticdb/core/agents/memory/: __init__.py  action_memory_agent.py  claim_memory_agent.py  event_memory_agent.py  types.py
agenticdb/core/agents/pattern/: __init__.py  extractor_agent.py  matcher_agent.py  types.py
agenticdb/core/agents/query/: __init__.py  causal_reasoning_agent.py  impact_analysis_agent.py  types.py
agenticdb/core/agents/schema/: __init__.py  schema_detector_agent.py  schema_proposal_agent.py  types.py
agenticdb/core/agents/transaction/: __init__.py  coordinator_agent.py  executor_agent.py  types.py
agenticdb/core/prompts/ingestion/: action_extraction_system.md  action_extraction_user.md  claim_extraction_system.md  claim_extraction_user.md  dependency_inference_system.md  dependency_inference_user.md  event_extraction_system.md  event_extraction_user.md
agenticdb/core/prompts/intent/: binding_system.md  parser_system.md  parser_user.md  validation_system.md
agenticdb/core/prompts/memory/: action_memory_system.md  claim_memory_system.md  event_memory_system.md
agenticdb/core/prompts/pattern/: extractor_system.md  matcher_system.md
agenticdb/core/prompts/query/: causal_reasoning_system.md  impact_analysis_system.md
agenticdb/core/prompts/schema/: schema_detection_system.md  schema_proposal_system.md
agenticdb/core/prompts/transaction/: coordinator_system.md  executor_system.md
agenticdb/core/tools/: __init__.py  json_store.py  mention_extractor.py  prompt_builder.py  prompt_loader.py  text2image.py
agenticdb/core/tools/evaluation/: __init__.py  calculator.py  types.py
agenticdb/core/tools/intent/: __init__.py  constraint_evaluator.py  query_builder.py  slot_detector.py
agenticdb/core/tools/metrics/: __init__.py  metrics_calculator.py
agenticdb/core/tools/pattern/: __init__.py  pattern_hasher.py  similarity_scorer.py
agenticdb/core/tools/transaction/: __init__.py  row_estimator.py  state_machine.py
agenticdb/core/utils/: __init__.py  lang2text.py  logger.py  oracle.py  token_usage_logger.py
agenticdb/ingestion/: __init__.py  compiler.py  extractor.py  schema_proposer.py
agenticdb/interface/: __init__.py  async_client.py  builders.py  client.py  query_result.py  session.py
agenticdb/mcp/: __init__.py  server.py  tools.py
agenticdb/query/: __init__.py  engine.py  operators.py
agenticdb/runtime/: __init__.py  cache.py  materialization.py  subscription.py
agenticdb/storage/: __init__.py  engine.py  index.py  pattern_store.py  sqlite.py
docs/: architecture.md  comparison.md  theory.md  vision.md
examples/: __init__.py  agent_driven_ingestion.py  agent_workflow.py  quickstart.py  semantic_ingestion.py
tests/: __init__.py  conftest.py  test_agents_ingestion.py  test_agents_memory.py  test_agents_query.py  test_core.py  test_dependency.py  test_integration.py  test_intent_models.py  test_llm_integration.py  test_materialization.py  test_mcp.py  test_sqlite_storage.py  test_transaction_models.py
